wui add more translations

--- a/wui/static/index.html
+++ b/wui/static/index.html
@@ -379,7 +379,7 @@
             </div>
         </div>
         <div class="row">
-            <div>Kui lisasid kommentaari, siis saadetakse see õpilasele emailiga.</div>
+            <div>{{feedbackEmailNote}}</div>
         </div>
         <button id="grade-button" class="waves-effect waves-light btn">{{addGradeButton}}</button>
     </div>
