EZ-1633 allow students to upload and download the submission as file, use material web components

--- a/wui/static/index.html
+++ b/wui/static/index.html
@@ -16,6 +16,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.65.1/addon/merge/merge.css"/>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/overlayscrollbars/2.3.0/styles/overlayscrollbars.min.css"/>
     <link rel="stylesheet" href="/static/css/main.css"/>
+    <link rel="stylesheet" href="/static/css/md.css"/>
     <link rel="stylesheet" href="/static/css/exercise.css"/>
 
     <!-- Favicon -->
