--- a/wui/static/index.html
+++ b/wui/static/index.html
@@ -501,7 +501,7 @@
 </script>
 
 
-<script src="https://idp.lahendus.ut.ee/auth/js/keycloak.js"></script>
+<script src="/static/js/keycloak-25.0.2.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.65.1/codemirror.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.65.1/addon/mode/loadmode.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.65.1/mode/meta.min.js"></script>
