EZ-1457 wui activity flow style

--- a/wui/static/index.html
+++ b/wui/static/index.html
@@ -457,7 +457,7 @@
     {{#softDeadline}}<p class="subheading-item"><span class="subheading">{{softDeadlineLabel}}:</span>{{softDeadline}}</p>{{/softDeadline}}
     {{#hardDeadline}}<p class="subheading-item"><span class="subheading">{{hardDeadlineLabel}}:</span>{{hardDeadline}}</p>{{/hardDeadline}}
     <h2>{{exerciseTitle}}</h2>
-    <div id="exercise-text">{{{exerciseText}}}</div>
+    <div class="exercise-text">{{{exerciseText}}}</div>
     {{#aaTitle}}
         <h4>{{aaTitle}}</h4>
         <div class="editor-wrapper editor-read-only aa-files-wrap">
