EZ-1601 show "please update" toast when static build number is out of date

--- a/wui/static/index.html
+++ b/wui/static/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="ez-wui-version" content="ez_wui_version_placeholder">
     <title>Lahendus</title>
     <link rel="preconnect" href="https://ems.lahendus.ut.ee">
     <link rel="preconnect" href="https://idp.lahendus.ut.ee">
